Actions
Bug #11731
closedkaio: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/os/aio.c:142:2: error: cast between incompatible function types from 'int64_t (*)(long int, long int, long int, long int, long int, long int)' {aka 'long int (*)(long int, long int, long int, long int, long int, long int)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())kaioc ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8ab009369fb9f9b1e690d195ddcfbd8165a53f34
commit 8ab009369fb9f9b1e690d195ddcfbd8165a53f34 Author: Toomas Soome <tsoome@me.com> Date: 2019-10-01T09:33:04.000Z 11731 kaio: cast between incompatible function types Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Dan McDonald <danmcd@joyent.com>
Actions